// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ack-event-form Renders \`ack-event-form\` with custom props 1`] = `
<div
  class="layout column"
>
  <span
    class="v-tooltip v-tooltip--top"
  >
    <!---->
    <div
      class="v-input v-input--is-label-active v-input--is-dirty theme--light v-input--selection-controls v-input--checkbox primary--text"
    >
      <div
        class="v-input__control"
      >
        <div
          class="v-input__slot"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light primary--text"
            >
              check_box
            </i>
            <input
              aria-checked="true"
              role="checkbox"
              type="checkbox"
              value=""
            />
            <div
              class="v-input--selection-controls__ripple primary--text"
            />
          </div>
          <label
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            Ack resources
          </label>
        </div>
        <div
          class="v-messages theme--light primary--text"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          />
        </div>
      </div>
    </div>
  </span>
  <c-description-field-stub
    label="Note"
    name="comment"
    required="true"
    value="Comment"
  />
</div>
`;

exports[`ack-event-form Renders \`ack-event-form\` with default props 1`] = `
<div
  class="layout column"
>
  <span
    class="v-tooltip v-tooltip--top"
  >
    <!---->
    <div
      class="v-input theme--light v-input--selection-controls v-input--checkbox"
    >
      <div
        class="v-input__control"
      >
        <div
          class="v-input__slot"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              check_box_outline_blank
            </i>
            <input
              aria-checked="false"
              role="checkbox"
              type="checkbox"
              value=""
            />
            <div
              class="v-input--selection-controls__ripple"
            />
          </div>
          <label
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            Ack resources
          </label>
        </div>
        <div
          class="v-messages theme--light"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          />
        </div>
      </div>
    </div>
  </span>
  <c-description-field-stub
    label="Note"
    name="comment"
  />
</div>
`;
